<resources>
    <string name="app_name">Roomies</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome,</string>
    <string name="signin_button">Sign In</string>
    <string name='signup_textview'>Don\'t have an account? Click sign up bellow!</string>

    <string name="house_code">House Code</string>
    <string name="house_code_button">Create New House Group</string>
    <string name="email_box_hint">Email</string>
    <string name="display_name_box_hint">Display Name</string>
    <string name="pw_box_hint">Password</string>
    <string name="repw_box_hint">Re-enter Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="title_activity_signup">Roomies Sign Up</string>

    <string name="chores">Chores To Do:</string>
    <string name="empty_textview">none!</string>
    <string name="chore_examples">unload dishwasher \ntake out trash</string>
    <string name="alert_examples">"rent due May 1st \nwifi due May 15th</string>
    <string name="alerts">Alerts:</string>

    <string name="assigned_to">Assigned to:</string>



    //nav bar
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rommies</string>
    <string name="nav_header_subtitle">Maddie Ross</string>
    //TODO replace nav header with username
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_home">Home</string>
    <string name="nav_chore_list">Chores</string>
    <string name="nav_add_chore">Add Chore</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_reminder">Send Reminder</string>
    <string name="nav_about">About</string>

    //about fragment

    <string name="about_info_textview">This app is a roommate organization tool for college
        students. Often roommates tend to be messy leaving dishes sitting out all day
        and letting the trash pile up. No one wants to take on the responsibility of
        tracking everyone’s chores or nagging their friends about keeping the house
        clean. My app will do the nagging for you! Just enter the desired chores and
        frequency the app will remind users to complete their chores.
    </string>

    <string name="add_chore_fragment_title">Add New Chore</string>
    <string name="chore_title">Chore Title</string>
    <string name="chore_description">Chore Description</string>
    <string name="chore_frequency">ChoreFrequency</string>
    <string name="chore_due_date">Chore Completion Date</string>
    <string name="weekly">weekly</string>
    <string name="daily">daily</string>
    <string name="add_button">Add</string>


    <string name="todo">Coming Soon!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
