<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/nav_home" android:icon="@android:drawable/btn_star"/>
        <item
                android:id="@+id/nav_add_chore"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/nav_add_chore"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings"/>
        <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_reminder"/>
    </group>

</menu>
