<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_signup"
        tools:context=".SignupActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="-37dp"
            tools:layout_editor_absoluteX="-111dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/error_textview" android:textSize="24sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/house_code_edittext" android:hint="@string/house_code"/>
        <Button
                android:text="@string/house_code_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/new_code_button"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name_edittext" android:hint="@string/display_name_box_hint"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/email_edittext" android:hint="@string/email_box_hint"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pw_edittext" android:hint="@string/pw_box_hint"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/repw_edittext" android:hint="@string/repw_box_hint"/>
        <Button
                android:text="@string/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/signup_button"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>