<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/error_textview" android:textSize="24sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:ems="10"
                android:id="@+id/email_edittext" android:hint="@string/email_box_hint" android:textAlignment="center"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pw_edittext" android:hint="@string/pw_box_hint" android:textAlignment="center"/>
        <Button
                android:text="@string/signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/signin_button"/>
        <TextView
                android:text="@string/signup_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/signup_info_textview" android:textAlignment="center"/>
        <Button
                android:text="@string/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/signup_button"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>